--- a/style.css
+++ b/style.css
@@ -60,44 +60,52 @@ form button:hover {
 #filmList {
     width: 100%;
     max-width: 1200px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
 }
 
 .film {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    margin: 10px;
-    width: 200px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .film img {
     width: 100%;
+    max-height: 300px; /* Definindo altura máxima da imagem */
     height: auto;
     display: block;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.film h3 {
+    text-align: center;
+    padding: 10px;
+    margin: 0;
+    background-color: #007bff;
+    color: white;
+    border-bottom: 1px solid #ccc;
 }
 
 .film p {
     padding: 10px;
-    width: 100%;
     text-align: center;
-    margin-bottom: 5px;
+    margin: 0;
 }
 
 .film button {
-    padding: 5px 10px;
+    width: 100%;
+    padding: 10px;
     background-color: #dc3545;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 0 0 5px 5px;
     cursor: pointer;
-    margin-bottom: 10px;
 }
 
 .film button:hover {
